--- a/index.html
+++ b/index.html
@@ -470,7 +470,9 @@
                 <span>¿No tienes cuenta?</span>
             </div>
 
-
+            <div class="register-link">
+                <a href="register.html">Registrarse aquí</a>
+            </div>
         </div>
     </div>
 
