--- a/pedidos.html
+++ b/pedidos.html
@@ -1371,6 +1371,10 @@
                     <span class="nav-icon">📋</span>
                     <span>Hist. Liquidaciones</span>
                 </a>
+                <a href="solicitudes.html" class="nav-item">
+                    <span class="nav-icon">👤✅</span>
+                    <span>Aceptación de Empleados</span>
+                </a>
             </div>
         </nav>
 
